--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@ body {
     text-rendering: optimizeLegibility;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     min-height: 100vh;
+    padding-top: 10vh;
     margin: 0;
 }
 
